# dotfiles

./: .MacOSX  .Xdefaults  .Xmodmap  .aliases  .apt-get  .bash_profile  .bashrc  .brew  .cider  .config  .debian  .dircolors  .exports  .fonts.conf  .functions  .gitconfig  .gitignore  .gitmodules  .hgignore  .hushlogin  .inputrc  .lib  .mc-lists.el  .osx  .path  .pip  .pylintrc  .sbt  .shared_exports  .slate.js  .synergy.conf  .tern_config  .tmux.conf  .tmux.powerline  .travis.yml  .wemo  .wgetrc  .xsessionrc  .zshenv  .zshrc  (+28 more)
.claude/: settings.local.json
.github/workflows/: cachix.yml  gh-pages.yml
completions/: _testify
docs/: cachix.md  hyprland-lua-migration-checklist.md  riverwm-evaluation.md  shared-dotfiles.md  tiling-wm-experience.md
docs/plans/: 2026-01-28-org-agenda-api-consolidation-design.md
dotfiles/: Xdefaults  Xmodmap  Xresources  bash_profile  bashrc  fonts.conf  gdbinit  gitconfig  gitconfig.org-agenda-api  gitignore  gtkrc-2.0  notify-osd  pylintrc  pypirc  slate.js  stalonetrayrc  synergy.conf  tern_config  tmux.conf  tmux.powerline  vimrc  xinitrc  xmobarrc  xprofile  xsession  xsessionrc  xsettingsd  zprofile  zshenv  zshrc
dotfiles/MacOSX/: environment.plist
dotfiles/X11/: .Xresources  .xprofile
dotfiles/agents/: AGENTS.md
dotfiles/boot/: boot.properties  profile.boot
dotfiles/cabal/: .gitignore  config
dotfiles/cider/: bootstrap.json
dotfiles/claude/: .gitignore  CLAUDE.md  settings.json  settings.local.json  settings.local.json.example
dotfiles/codex/: .gitignore  AGENTS.md  config.toml
dotfiles/config/: .gitignore  compton.conf  flake8  mimeapps.list  picom.conf  starship.toml
dotfiles/config/hypr/workspace-history-plugin/: CMakeLists.txt
dotfiles/config/hypr/workspace-history-plugin/src/: main.cpp
dotfiles/config/river-xmonad/: Main.hs  imalison-river-xmonad.cabal  overlay.nix
dotfiles/config/taffybar/: AGENTS.md  Justfile  MENU_CSS_DEBUG.md  base.nix  cabal.project  default.nix  end-widget-colors.css  end-widget-solid.css  flake.nix  gotham.css  imalison-taffybar.cabal  ivanm-dfinity-razer.css  jay-lenovo.css  log-levels.yaml  material.css  menu-debug.css  overlay.nix  palette.css  profile.nix  ryzen-shine.css  scratch.css  shell.nix  sni-priorities.yaml  stack.yaml  strixi-minaj.css  taffybar.css  taffybar.hs  taffybar.rc  theme.css  uber-loaner.css  waybar-widget-ideas.md
dotfiles/config/taffybar/TaffybarConfig/: AIUsage.hs  ChromeFavicons.hs  Config.hs  Host.hs  RuntimeStats.hs  Temperature.hs  WidgetUtil.hs  Widgets.hs  Workspaces.hs
dotfiles/config/taffybar/lib/: ToggleMonitor.hs
dotfiles/config/taffybar/scripts/: taffybar-capture-sni-menu  taffybar-crop-bar  taffybar-popup-sni-menu  taffybar-restart  taffybar-run  taffybar-screenshot  taffybar-screenshot-all  taffybar-screenshot-focused-monitor
dotfiles/config/xmonad/: .envrc  .gitignore  ChangeLog.md  PagerHints.hs  base.nix  build  cabal.project  default.nix  flake.nix  imalison-xmonad.cabal  overlay.nix  shell.nix  stack.yaml  taffybar  xmonad.hs
dotfiles/config/xmonad/src/: PagerHints.hs
dotfiles/emacs.d/: .gitignore  .mc-lists.el  README.org  ansi-color-mode.el  config.org  custom-before.el~  early-init.el  elpaca-installer.el  init.el  kat-mode.org  muni.org  org-api.el  org-config.org  source-code-pro-theme.el
dotfiles/gtk/: .gtkrc-2.0
dotfiles/hammerspoon/: init.lua
dotfiles/haskell/: .ghci  .hindent.yaml
dotfiles/lein/: profile.clj
dotfiles/lib/: brew.sh  cocoa-emacs.scpt  editor.sh  get_cols.awk  git-ssh.sh  login.sh  mu4e_sync.sh  nix_login.sh  pager.sh  setup_functions.sh  shellenv.sh  shellpath.sh  shellrc.sh  zsh.sh
dotfiles/other/: .dircolors  .synergy.conf
dotfiles/other-linux/: .imwheelrc
dotfiles/pip/: pip.conf
dotfiles/python/: .pylintrc
dotfiles/sbt/: .gitignore
dotfiles/taffybar/.config/taffybar/: imalison-taffybar.cabal  stack.yaml
dotfiles/tmux/: .tmux.conf  .tmux.powerline
dotfiles/wemo/: cache  config.yml
dotfiles/xmonad/: .gitignore  build  imalison-xmonad.cabal  stack.yaml  taffybar  xmonad.hs
dotfiles/xmonad/.config/xmonad/: build  stack.yaml
elpa/: ctags-readme.txt  ctags-update-readme.txt  multiple-cursors-readme.txt
elpa/color-theme-20080305.34/: color-theme-autoloads.el  color-theme-pkg.el
elpa/color-theme-6.5.5/: color-theme-autoloads.el  (+4 more)
gen-gh-pages/: .gitignore  Cask  compile.sh  deploy.sh  faces.css  generate-html.el
lisp/: auto-complete-config.elc  auto-complete.elc  ensime-imenu.el  erc-notify.el  fuzzy.elc  init_elpa.el  popup.elc  setup-slime-js.el
load.d/: ensime-imenu.el  helm-org-headlines.el  mu4e.el
nix-darwin/: create-user.sh  flake.nix  flake.nix.save  gitea-actions-runner.nix  gitea-runner-external-storage.nix  justfile  result  switch-gitea-runner.sh
nix-shared/: ccusage-fleet-config.nix  syncthing.nix  t3code-server.nix  t3code.nix
nixos/: #users.nix#  AGENTS.md  agent-workspace.nix  all.nix  android.nix  appearance.nix  arm-incompatible.nix  base.nix  ben.nix  bootstrap.nix  cache-server.nix  cache.nix  cachix.nix  cargo-sweep.nix  ccusage-fleet.nix  chrome-favicon-dbus.nix  claude-mcp.nix  claude-remote-control.nix  code.nix  configuration.nix  cua.nix  desktop.nix  dfinity.nix  display-manager.nix  dotfiles-links.nix  dunst.nix  electron.nix  emacs-overlay.nix  emacs.nix  emby.nix  environment.nix  essential-no-arm.nix  essential-packages.nix  essential.nix  expire-home-manager-generations.sh  extra.nix  fix-update-inputs-issue.sh  flake.nix  flakes.nix  fonts.nix  (+81 more)
org-agenda-api/: .envrc  .gitignore  container.nix  deploy.sh  justfile  secrets.nix
resources/: add_emacs.d_aliases.sh  bootstrapping.sh  brew.sh  com.googlecode.iterm2.plist  everything.sh  exwm-xinit  install_pacaur.sh  install_pygame.sh  karabiner-hyper.xml  karabiner_config.sh  npm.sh  org.imalison.mu4e-update-mail.plist  org.imalison.wifi-auto-switch.plist  osx.sh  osx_setup.sh  python_packages.txt  requirements.txt  set-path.plist  synergy.conf  system_shell_profile.sh  xorg.conf
shared/: multiplexer-aliases.nix
tasks/: __init__.py  arch.py  imalison.py  linux.py  osx.py  util.py
(+832 files in other folders)
