name:                imalison-xmonad
version:             0.1.0.0
synopsis:            Ivan Malison's xmonad configuration.
homepage:            https://github.com/IvanMalison/dotfiles/tree/master/dotfiles/xmonad
license:             GPL-3
license-file:        LICENSE
author:              Ivan Malison
maintainer:          IvanMalison@gmail.com
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable imalison-xmonad
  main-is:             xmonad.hs
  build-depends:       X11>=1.8,
                       aeson>=0.11.2.1,
                       base >=4.9 && <4.10,
                       bytestring>=0.10.8.1,
                       containers>=0.5.7.1,
                       directory>=1.2.6.2,
                       filepath>=1.4.1.0,
                       gtk-traymanager>=0.1.6,
                       hostname>=1.0,
                       multimap>=1.2.1,
                       split,
                       taffybar>=0.4.6,
                       transformers>=0.5.2.0,
                       xmonad-contrib>=0.13,
                       xmonad>=0.13
  hs-source-dirs:      .
  default-language:    Haskell2010
