name:                imalison-taffybar
version:             0.1.0.0
homepage:            https://github.com/IvanMalison/dotfiles/tree/master/dotfiles/config/taffybar
license:             BSD3
author:              Ivan Malison
maintainer:          IvanMalison@gmail.com
copyright:           Ivan Malison
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable imalison-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:      -threaded -g -rtsopts
  ghc-prof-options: -fprof-auto
  build-depends:       base
                     , X11>=1.8
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hostname
                     , hslogger
                     , process
                     , split
                     , taffybar>=3.2.0
                     , transformers
                     , xdg-basedir
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/IvanMalison/dotfiles
