name:                imalison-xmonad
version:             0.1.0.0
synopsis:            Ivan Malison's xmonad configuration.
homepage:            https://github.com/IvanMalison/dotfiles/tree/master/dotfiles/config/xmonad
license:             GPL-3
license-file:        LICENSE
author:              Ivan Malison
maintainer:          IvanMalison@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable imalison-xmonad
  main-is:             xmonad.hs
  build-depends:       aeson>=0.11.2.1
                     , X11>=1.8
                     , base >=4.7
                     , bytestring>=0.10.8.1
                     , containers>=0.5.7.1
                     , directory>=1.2.6.2
                     , filepath>=1.4.1.0
                     , hostname>=1.0
                     , multimap>=1.2.1
                     , process>=1.4.3.0
                     , split
                     , transformers>=0.5.2.0
                     , tuple >= 0.3.0.2
                     , utf8-string
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  hs-source-dirs:      .
  other-modules:     PagerHints
  default-language:    Haskell2010
